Fixed typos, added some css

--- a/src/main/webapp/resources/main.css
+++ b/src/main/webapp/resources/main.css
@@ -1,27 +1,10 @@
-.div {
-	border: 1px solid black;
-	padding: 2px;
-	box-shadow: 4px 4px 2px #888888;
-	width: 200px;
-	margin: 10px;
-	float: left;
+body {
+	
+	background-image: url("../resources/background.png");
+	background-repeat: repeat;
+	
 }
 
-.printDiv {
-	border: 1px solid black;
-	padding: 2px;
-	box-shadow: 4px 4px 2px #888888;
-	width:640px;
-	margin: 10px;
-}
-
-.tableDiv {
-	border: 1px solid black;
-	padding: 2px;
-	box-shadow: 4px 4px 2px #888888;
-	float: left;
-	margin: 10px;
-}
 
 .wrap {
 	
@@ -30,19 +13,62 @@
 }
 
 .container1 {
-	float: right;
-    width: 80%;
+	float: left;
+    width: 100%;
 	
 }
 
-.container2 {
-	float:left; 
-    width: 20%;
+.card {
+	
+	border: 1px solid black;
+	width: 200px;
+	margin: 10px;
+	float: left;	
+	border-radius: 5px;
+	padding-bottom: 5px;
+	background-image: url("../resources/background-card.png");
+	
+}
+
+.cardHeader {
+	
+	text-align: center;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	background: #ADD8E6;
+	border-bottom: 1px solid black;
+	font-size:larger;
+}
+
+.cardData {
+	
+	padding: 2px;	
+	padding-left: 5px;
+	
+}
+
+.winner {
+	
+	border: 1px solid black;
+	box-shadow: 1px 1px 1px #888888;
+	padding: 1px;
+	background: #3CB371;
+	font-size:larger;
+	font-weight: bold;
+	
+}
+
+.pointList {
+	
+	border: 1px solid black;
+	box-shadow: 1px 1px 1px #888888;
+	
 }
 
 
+
 .button {
-	background-color: gold;
+	background-color: #ADD8E6;
 	color: black;
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 14px;
@@ -84,8 +110,7 @@
 	font-size: medium;
 }
 
-
-.printTable {
+table {
 	color: #333;
 	font-family: Helvetica, Arial, sans-serif;
 	border-collapse: collapse;
@@ -93,32 +118,31 @@
 	border: 1px solid black;
 }
 
-.printTable td, th {
+table td, th {
 	border: 1px solid transparent;
 	height: 30px;
 	transition: all 0.3s;
 }
 
-.printTable th {
+table th {
 	background: #DFDFDF;
 	font-weight: bold;
 }
 
-.printTable td {
+table td {
 	background: #FAFAFA;
 	text-align: center;
 }
 
-.printTable tr:nth-child(even) td {
+table tr:nth-child(even) td {
 	background: #F1F1F1;
 }
 
-.printTable tr:nth-child(odd) td {
+table tr:nth-child(odd) td {
 	background: #FEFEFE;
 }
 
-.printTable tr td:hover {
+table tr td:hover {
 	background: #666;
 	color: #FFF;
 }
-
